refactored to use inventory.yml file

--- a/roles/km_bash/templates/bash_profile.j2
+++ b/roles/km_bash/templates/bash_profile.j2
@@ -8,12 +8,12 @@ export KM_VIM="$KM_HOME/.myvim"
 source "$KM_BASH/lib/gruvbox_256palette_osx.sh"
 
 # Set local prompt name/color
-export KM_PROMPT="{{ prompt_name }}"
-export KM_PROMPT_COLOR="{{ prompt_color }}"
+export KM_PROMPT="{{ km_bash_prompt_name }}"
+export KM_PROMPT_COLOR="{{ km_bash_prompt_color }}"
 
 # Set local name and email (for git, mostly)
 export KM_NAME="Kevin McCulloch"
-export KM_EMAIL="{{ km_email }}"
+export KM_EMAIL="{{ km_bash_email }}"
 
 alias vi='vim'
 
